--- a/notebooks/direct_encoding.ipynb
+++ b/notebooks/direct_encoding.ipynb
@@ -196,7 +196,7 @@
     "all_categorical_columns = ['default', 'housing', 'loan', 'job', 'marital', 'education', 'contact', 'poutcome']\n",
     "\n",
     "# Epsilons y resultados\n",
-    "epsilons = [5, 1, 0.1]\n",
+    "epsilons = [5, 1, 0.5, 0.1]\n",
     "results = {}"
    ]
   },
@@ -397,9 +397,9 @@
     "ax = results_df.plot(kind='bar', width=0.7, color=colores)\n",
     "\n",
     "# Añadir título y etiquetas\n",
-    "plt.title('Comparación de métricas para diferentes $\\epsilon$ en LDP')\n",
+    "plt.title('Comparación de métricas para diferentes $\\epsilon$ en Direct Encoding')\n",
     "plt.xlabel('Métricas')\n",
-    "plt.ylabel('Valor de la métrica')\n",
+    "plt.ylabel('Valor')\n",
     "plt.xticks(rotation=45)\n",
     "plt.legend(title='Modelos')\n",
     "\n",
