DE with epsilon=2

--- a/notebooks/DE copy.ipynb
+++ b/notebooks/DE copy.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "id": "a265af3e",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
     "        data[f'{model} (min)'] = stats['min']\n",
     "        data[f'{model} (max)'] = stats['max']\n",
     "    df = pd.DataFrame(data).round(4)\n",
-    "    df.to_csv(f'results/{method_name}_results.csv')\n",
+    "    df.to_csv(f'results/{method_name}_final_results.csv')\n",
     "    return df\n",
     "\n",
     "# Función para graficar con bigotes verticales (métricas en el eje X, modelos en la leyenda)\n",
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 241,
    "id": "b9bf0f85",
    "metadata": {},
    "outputs": [
