--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -93,6 +93,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -111,6 +131,15 @@
     "feat_selector.fit(X_resample.values, y_resample.values.ravel())\n",
     "X_filtered = X.columns[feat_selector.support_].tolist()\n",
     "print(f\"Selected features: {len(X_filtered)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_filtered"
    ]
   },
   {
