--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -93,6 +93,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total samples before SMOTEENN: 45211\n",
+      "Class distribution before SMOTEENN:\n",
+      "y\n",
+      "0    31937\n",
+      "1     4231\n",
+      "Name: count, dtype: int64\n",
+      "Class distribution percentages:\n",
+      "y\n",
+      "0    88.301814\n",
+      "1    11.698186\n",
+      "Name: proportion, dtype: float64\n",
+      "total samples after SMOTEENN: 53504\n",
+      "Class distribution after SMOTEENN:\n",
+      "y\n",
+      "1    27937\n",
+      "0    25567\n",
+      "Name: count, dtype: int64\n",
+      "Class distribution percentages:\n",
+      "y\n",
+      "1    52.214788\n",
+      "0    47.785212\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Class distribution before SMOTEENN\n",
+    "print(\"total samples before SMOTEENN:\", len(X))\n",
+    "print(\"Class distribution before SMOTEENN:\")\n",
+    "print(y_train.value_counts())\n",
+    "# Print percentages\n",
+    "print(\"Class distribution percentages:\")\n",
+    "print(y_train.value_counts(normalize=True) * 100)\n",
+    "# Check class distribution\n",
+    "print(\"total samples after SMOTEENN:\", len(y_resample))\n",
+    "print(\"Class distribution after SMOTEENN:\")\n",
+    "print(y_resample.value_counts())\n",
+    "# Print percentages\n",
+    "print(\"Class distribution percentages:\")\n",
+    "print(y_resample.value_counts(normalize=True) * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
